Added schema to class Client & User Added OpenApi annotations to Controllers Deleted useless ProductNormalizer.php Modified swagger.json file with new annotations and by hand
