# src/Controller/ProductController.php
@@ -5,15 +5,23 @@ namespace App\Controller;
 use App\Repository\ProductRepository;
 use App\Repository\TypeRepository;
 use Hateoas\HateoasBuilder;
+use Hateoas\Representation\CollectionRepresentation;
+use Hateoas\Representation\PaginatedRepresentation;
+use JMS\Serializer\Exception\Exception;
+use JMS\Serializer\Exception\SkipHandlerException;
 use JMS\Serializer\SerializationContext;
+use Pagerfanta\Pagerfanta;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
+use Symfony\Component\Serializer\Exception\NotEncodableValueException;
 use Symfony\Component\Serializer\Normalizer\AbstractNormalizer;
 use Symfony\Component\Serializer\Normalizer\NormalizableInterface;
 use Symfony\Component\Serializer\SerializerInterface;
 use OpenApi\Annotations as OA;
+use Hateoas\Representation\Factory\PagerfantaFactory;
+
 //use FOS\RestBundle\Controller\Annotations as Rest;
 
 /**
@@ -37,6 +45,10 @@ class ProductController extends AbstractController
     /**
      * @OA\Get(
      *     path="/api/products",
+     *     operationId="App\Controller\ProductController::listProduct",
+     *     security={"bearer"},
+     *     summary="Récupération de la liste des produits",
+     *     tags={"Produits"},
      *     @OA\Response(
      *          response="200",
      *          description="Liste des produits",
@@ -53,6 +65,13 @@ class ProductController extends AbstractController
 
         $products = $productRepository->findAll();
 
+//        $pagerfantaFactory   = new PagerfantaFactory(); // you can pass the page,
+//        // and limit parameters name
+//        $paginatedCollection = $pagerfantaFactory->createRepresentation(
+//            new Pagerfanta(1),
+//            new Route('user_list', array())
+//        );
+
         $json = $hateoas->serialize($products, 'json', SerializationContext::create()->setGroups(array('product:list')));
 
         return new JsonResponse($json, 200, [], true);
@@ -61,10 +80,14 @@ class ProductController extends AbstractController
     /**
      * @OA\Get(
      *     path="/api/products/{id}",
+     *     operationId="App\Controller\ProductController::detailProduct",
+     *     security={"bearer"},
+     *     summary="Détail d'un produits",
+     *     tags={"Produits"},
      *     @OA\Parameter(
      *          name="id",
      *          in="path",
-     *          description="ID de la ressource.",
+     *          description="Identifiant du Produit.",
      *          required=true,
      *          @OA\Schema(type="integer")
      *     ),
@@ -83,9 +106,14 @@ class ProductController extends AbstractController
         $hateoas = HateoasBuilder::create()->build();
 
         $product = $productRepository->find($id);
-
-        $json = $hateoas->serialize($product, 'json', SerializationContext::create()->setGroups(array('product:detail')));
-
-        return new JsonResponse($json, 200, [], true);
+        try {
+            $json = $hateoas->serialize($product, 'json', SerializationContext::create()->setGroups(array('product:detail')));
+            return new JsonResponse($json, 200, [], true);
+        } catch (NotEncodableValueException $e) {
+            return $this->json([
+                'status' => $e->getCode(),
+                'message' => $e->getMessage()
+            ], 400);
+        }
     }
 }
